fix: reduce overlay width to avoid overflow

--- a/src/sass/components/_overlay.scss
+++ b/src/sass/components/_overlay.scss
@@ -3,7 +3,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 200%;
+  width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
   z-index: 1000;
